tests/ui/extern/extern-const.stderr
error: extern items cannot be `const`
  --> $DIR/extern-const.rs:14:11
   |
LL |     const rust_dbg_static_mut: libc::c_int;
   |     ------^^^^^^^^^^^^^^^^^^^
   |     |
   |     help: try using a static value: `static`
   |
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: aborting due to 1 previous error

